tests/typing/faulty_union_number_neg.sy
start :: fn do
    a : int|float|str = 1
    -a
end

// error: $UniOp { .. }
